Bug 306408 - When a password is changed set lastLoginFailed to false
Summary: When a password is changed set lastLoginFailed to false
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: 0.5.0
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-09-07 16:44 UTC by David Edmundson
Modified: 2012-10-26 04:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-09-07 16:44:58 UTC
After changing my password in the accounts KCM having been told it was wrong, when connection started I got a prompt asking me for my password.

The auth-handler stores a hidden field lastLoginFailed, if this is set to true it will prompt the user regardless. 

When the password is changed in the accountsKCM this should be set to false.

m_walletInterface->setEntry(account, QLatin1String("lastLoginFailed"),QLatin1String("false"));
Comment 1 David Edmundson 2012-10-26 04:00:07 UTC
This is merged already.

git ref 5ba2fda9ea034dee7728db26b2768c73e56a1da8