Set lastLoginFailed to false when changing password

Also expose lastLoginFailed to the library

REVIEW: 106386
BUG: 306408